readjusting tests Bug 570605 - [16] [records] No error reported for local class extending sealed class inside a local record
Change-Id: I093eb93a0a0c13f0f48b6878d7cc296c1e7990a5
Signed-off-by: Manoj Palat <manpalat@in.ibm.com>