@@ -8252,31 +8252,6 @@ public void testBug570230_001() {
 			"Extended dimensions are illegal for a record component\n" +
 			"----------\n");
 }
-public void testBug570605_001() {
-	runNegativeTest(
-			new String[] {
-				"X.java",
-				"sealed class Y {}\n"+
-				"non-sealed class Z extends Y {}\n"+
-				"public class X {\n"+
-				" public void foo() {\n"+
-				"        record R()  {\n"+
-				"            class L extends Y {}\n"+
-				"        }\n"+
-				"    }\n"+
-				"}"
-			},
-			"----------\n" +
-			"1. ERROR in X.java (at line 6)\n" +
-			"	class L extends Y {}\n" +
-			"	                ^\n" +
-			"A local class L cannot have a sealed direct superclass or a sealed direct superinterface Y\n" +
-			"----------\n",
-			null,
-			true,
-			new String[] {"--enable-preview"},
-			getCompilerOptions());
-}
 public void testBug571015_001() {
 	runNegativeTest(
 			new String[] {
